@@ -1,5 +1,8 @@
 Changes with APR-util b1  
 
+  *) Add APR_SHARELOCK support to apr_sdbm_open(), locking read operations
+     with a shared lock and all write ops with an excl lock.  [Will Rowe]
+
   *) Namespace protect apr_sdbm, and normalize the return values (including
      the apr_sdbm_fetch, apr_sdbm_firstkey and apr_sdbm_nextkey functions).
      Normalized the get/clear error function names, and stores the actual 
